# universal_fa

./: CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
components/: config.h
configs/: m_four.config  m_one.config  m_three.config  m_two.config
finite_automata/: FiniteAutomata.h  FiniteAutomataBuilder.h  FiniteAutomataTester.h  FiniteAutomataUtilities.h
finite_automata/src/: FiniteAutomata.cpp  FiniteAutomataBuilder.cpp  FiniteAutomataTester.cpp  FiniteAutomataUtilities.cpp
